syntax = "proto3";

package gitaly;

import "shared.proto";

option go_package = "gitlab.com/gitlab-org/gitaly/v16/proto/go/gitalypb";

// LogEntry is a single entry in a partition's write-ahead log.
//
// Schema for :
// - `partition/<partition_id>/log/entry/<log_index>`.
message LogEntry {
  // ReferenceTransaction models a single reference transaction.
  message ReferenceTransaction {
    // Change models a single reference change.
    message Change {
      // reference_name is the fully qualified name of the reference
      // to update.
      bytes reference_name = 1;
      // new_oid is the new oid to point the reference to. Deletions
      // are denoted as the SHA1 or SHA256 zero OID depending on the
      // hash type used in the repository.
      bytes new_oid = 2;
    }

    // changes are the reference changes performed in this reference transaction.
    repeated Change changes = 1;
  }

  // DefaultBranchUpdate models a default branch update.
  message DefaultBranchUpdate {
    // reference_name is the fully qualified name of the reference
    // to update the default branch to.
    bytes reference_name = 1;
  }

  // CustomHooksUpdate models an update to the custom hooks.
  message CustomHooksUpdate {
    // custom_hooks_tar is a TAR that contains the custom hooks in
    // `custom_hooks` directory. The contents of the directory are
    // unpacked as the custom hooks.
    bytes custom_hooks_tar = 1;
  }

  // RepositoryCreation models a repository creation.
  message RepositoryCreation {
    // object_format defines the object format to use for the repository.
    ObjectFormat object_format = 1;
  }

  // RepositoryDeletion models a repository deletion.
  message RepositoryDeletion {
  }

  // AlternateUpdate models an update to the 'objects/info/alternates' file.
  message AlternateUpdate {
    // path is the path to set in the alternates file. If the path is empty,
    // the alternate file is removed.
    string path = 1;
  }

  // Housekeeping models a housekeeping run. It is supposed to handle housekeeping tasks for repositories such as the
  // cleanup of unneeded files and optimizations for the repository's data structures. It is a collection of smaller
  // tasks.
  message Housekeeping {
    // PackRefs models a pack-refs housekeeping task. This task is to pack loose references into a singular packed-refs
    // file to optimize ref accessing time. In other words, it's a wrapper for git-pack-refs command.
    message PackRefs {
      // pruned_refs is the list of fully qualified references to be pruned. Gitaly removes the loose reference files on
      // the disk. They still stay intact in the packed-refs.
      repeated bytes pruned_refs = 1;
    }

    // Repack models a repacking housekeeping task. The task re-organizes the packfiles for fater access...
    message Repack {
      repeated bytes newFiles = 1;
      repeated bytes deletedFiles = 2;
      repeated bytes prunedObjects = 3;
    }

    // pack_refs signifies if the housekeeping run includes a pack-refs task.
    PackRefs pack_refs = 1;
    // repack signifies if the housekeeping run includes a repacking task.
    Repack repack = 2;
  }

  // relative_path is the relative path of the repository the changes in the
  // log entry are targeting.
  string relative_path = 1;
  // reference_transactions contains the reference transactions this
  // entry records. The logged reference updates have already passed
  // through verification and are applied without any further checks.
  // The reference transactions are applied in order.
  repeated ReferenceTransaction reference_transactions = 2;
  // default_branch_update contains the information pertaining to updating
  // the default branch of the repo.
  DefaultBranchUpdate default_branch_update = 3;
  // custom_hooks_update contains the custom hooks to set in the repository.
  CustomHooksUpdate custom_hooks_update = 4;
  // pack_prefix contains the prefix (`pack-<digest>`) of the pack and its index.
  // If pack_prefix is empty, the log entry has no associated pack.
  string pack_prefix = 5;
  // repository_deletion, when set, indicates this log entry deletes the repository.
  RepositoryDeletion repository_deletion = 6;
  // repository_creation is set if this log entry creates a repository.
  RepositoryCreation repository_creation = 7;
  // alternate_update records a change to the repository's 'objects/info/alternates' file.
  AlternateUpdate alternate_update = 8;
  // housekeeping, when set, indicates this log entry contains a housekeeping task.
  Housekeeping housekeeping = 9;
}

// LSN serializes a log sequence number. It's used for storing a partition's
// applied LSN in the database.
//
// Schema for:
// - `partition/<partition_id>/applied_lsn`
message LSN {
  // value is an LSN pointing to a position in the log.
  uint64 value = 1;
}
